# vandalizer-vr

./: .gitmodules  CMakeLists.txt  README.md  index.html  vandalizer-vr.js  vandalizer-vr.wasm
resources/models/spray_can/: LICENSE  scene.gltf
resources/shaders/: colorpicker.fs  colorpicker.vs  compose.fs  room.fs  room.vs  standard.fs  standard.vs
resources/shaders/paint/: spray.fs  spray.vs
resources/shaders/spray/: pos-vel.fs
src/: app.cpp  app.h  controls.cpp  controls.h  main.cpp  util.h
wasm/: index.html
